# bitgo-trading-bot

./: .gitignore  README.md
pybitgo/: .gitignore  README.md  pyproject.toml
pybitgo/src/pybitgo/rest/schema/: __init__.py  account.py  balance.py  level2.py
pybitgo/src/pybitgo/rest/trade/: __init__.py  http_status_codes.py
pybitgo/src/pybitgo/rest/trade/schema/: currency.py  level1.py  order.py
pybitgo/src/pybitgo/schema/: __init__.py  product.py
pybitgo/src/pybitgo/trade/rest/: __init__.py
pybitgo/src/pybitgo/trade/rest/schema/: __init__.py  order.py  trade.py  user.py
pybitgo/src/pybitgo/ws/: __init__.py
pybitgo/src/pybitgo/ws/schema/: __init__.py  level2.py  order.py
pybitgo/src/pybitgo/ws/trade/: __init__.py
pybitgo/tests/: test_rest_trade.py
