[build-system]
requires = ["hatchling", "requests==2.28.1", "websocket-client==1.3.3"]
build-backend = "hatchling.build"

[project]
name = "pybitgo"
version = "0.0.1"
authors = [
  { name="Benny Huang", email="benny.huang@hypotenuse.ca" },
]
description = "bitgo api"
readme = "README.md"
# license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
